# MATP_DSIS_code

./: README.md  SLWAP.m  SLWAP_main.m  SNS_Opt_Iter_M3.m  tmp.key  tmp.pgm
LRDSaliency/: CMakeLists.txt  DatasetLR-old.py  Flownet.py  LRDSaliencyAtten_2.py  LRDSaliencyAtten_train.py  LRDSaliencyAttention.py  LRDSaliencyModel.py  LRDSaliencyModel_DeleteCheckerboard1.py  LRDSaliencyModel_S3D_Image.py  LRDSaliency_test.py  LRDSaliency_train.py  attention.py  delete_left.m  flownet111.py  flownet_test.py  my_flownet.py  nohup.out  p3d_train_pretrain.py  test_flownet.py
LRDSaliency/logs/: events.out.tfevents.1556628274.amax  events.out.tfevents.1556628430.amax  events.out.tfevents.1556628498.amax  events.out.tfevents.1556628970.amax  events.out.tfevents.1556629456.amax  events.out.tfevents.1557474610.amax  events.out.tfevents.1561623371.amax  events.out.tfevents.1561779416.amax  events.out.tfevents.1561972529.amax  events.out.tfevents.1586529775.amax  events.out.tfevents.1586530507.amax  events.out.tfevents.1586531643.amax  events.out.tfevents.1586532230.amax  events.out.tfevents.1586604634.amax  events.out.tfevents.1586607134.amax  events.out.tfevents.1586607304.amax  events.out.tfevents.1586607392.amax  events.out.tfevents.1586607495.amax  events.out.tfevents.1586607849.amax  events.out.tfevents.1586608085.amax  events.out.tfevents.1586608158.amax  events.out.tfevents.1586608871.amax  events.out.tfevents.1586609254.amax  events.out.tfevents.1586609614.amax  events.out.tfevents.1586609834.amax  events.out.tfevents.1586609992.amax  events.out.tfevents.1586610254.amax  (+8 more)
(+94 files in other folders)
